Fix content overflow problem

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
 body {
     display: flex;
     font-family: 'Roboto', Arial, Helvetica, sans-serif;
-    height: 100vh;
+    min-height: 100vh;
     margin: 0;
     color: var(--main-color);
 }
